quorum/test/tests/TypeChecker/Fail/ImpAssignBooleanTextObj.quorum
Text something
something:setValue("Something!")
boolean b = something